[package]
name = "excentra"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
rust_decimal = { version = "1.40.0", features = ["serde-float"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
rust_decimal_macros = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
bcrypt = "0.17"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }