[package]
name = "excentra"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
rust_decimal = { version = "1.40.0", features = ["serde-with-str"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
rust_decimal_macros = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
bcrypt = "0.17"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8", features = ["macros", "ws"] } # TODO: remove macros features
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
validator = { version = "0.19", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"]}
rand = "0.10.0"
sha2 = "0.11.0"
hex = "0.4.3"
axum-extra = { version = "0.12.5", features = ["cookie"]}
